--- a/20230321_helloidol/helloidol.html
+++ b/20230321_helloidol/helloidol.html
@@ -17,10 +17,23 @@
             <li>리즈</li>
             <li>이서</li>
         </ul>
+        <ul>
+            <li>유진</li>
+            <li>가을</li>
+            <li>레이</li>
+            <li>원영</li>
+            <li>리즈</li>
+            <li>이서</li>
+        </ul>
         <img src="https://photo.jtbc.co.kr/news/jam_photo/202209/13/0b9cb1d5-7934-429f-9f69-062552039717.jpg" alt="아이브" height="500px">
     </div>
     <div>
         <h1>부석순</h1>
+        <ol>
+            <li>승관</li>
+            <li>순영</li>
+            <li>도겸</li>
+        </ol>
         <ol>
             <li>승관</li>
             <li>순영</li>
@@ -34,5 +47,22 @@
         <input type="radio" name="gender" id="" checked>
         <input type="radio" name="gender" id="">
     </div>
+
+    <!-- head -->
+    <h1>Hello, World!</h1>
+    <h2>Hello, World!</h2>
+    <h3>Hello, World!</h3>
+    <h4>Hello, World!</h4>
+    <h5>Hello, World!</h5>
+    <h6>Hello, World!</h6>
+
+    <h6>Hello, World!</h6>
+    <h5>Hello, World!</h5>
+    <h4>Hello, World!</h4>
+    <h3>Hello, World!</h3>
+    <h2>Hello, World!</h2>
+    <h1>Hello, World!</h1>
+
+
 </body>
 </html>
