--- a/20230321_helloidol/helloidol.html
+++ b/20230321_helloidol/helloidol.html
@@ -7,6 +7,7 @@
     <title>Hello Idol</title>
 </head>
 <body>
+    <a href="http://google.com" >구글구글</a>
     <div>
         <h1>아이브</h1>
         <ul>
@@ -63,6 +64,6 @@
     <h2>Hello, World!</h2>
     <h1>Hello, World!</h1>
 
-
+    
 </body>
 </html>
