--- a/20230321_helloidol/helloidol.html
+++ b/20230321_helloidol/helloidol.html
@@ -7,22 +7,22 @@
     <title>Hello Idol</title>
     <style>
         h1 {
-            background-color: gray; /*bacco*/
+            background-color: gray;
         }
     </style>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <a href="http://google.com" >구글구글</a>
+    <a href="https://google.com">구글구글</a>
     <div>
         <h1 style="color: white;">아이브</h1>
         <ul>
-            <li>유진</li>
-            <li>가을</li>
-            <li>레이</li>
-            <li>원영</li>
-            <li>리즈</li>
-            <li>이서</li>
+            <li class="korea leader">유진</li>
+            <li class="korea incheon">가을</li>
+            <li class="japan">레이</li>
+            <li class="korea" style="color: violet;">원영</li>
+            <li class="korea">리즈</li>
+            <li class="korea">이서</li>
         </ul>
         <ul>
             <li>유진</li>
@@ -32,44 +32,54 @@
             <li>리즈</li>
             <li>이서</li>
         </ul>
-        <img src="https://photo.jtbc.co.kr/news/jam_photo/202209/13/0b9cb1d5-7934-429f-9f69-062552039717.jpg" alt="아이브" height="500px">
+        <img src="https://isplus.com/data/isp/image/2023/01/21/isp20230121000075.jpg" alt="아이브 한복 자태가 곱다">
     </div>
     <div>
-        <h1>부석순</h1>
+        <h1>더보이즈 8집 Be Awake 발매</h1>
         <ol>
-            <li>승관</li>
-            <li>순영</li>
-            <li>도겸</li>
+            <li>상연</li>
+            <li>제이콥</li>
+            <li>영훈</li>
+            <li>현재</li>
+            <li>주연</li>
+            <li>케빈</li>
+            <li>뉴</li>
+            <li>큐</li>
+            <li>주학년</li>
+            <li>선우</li>
+            <li>에릭</li>
         </ol>
         <ol>
-            <li>승관</li>
-            <li>순영</li>
-            <li>도겸</li>
+            <li>상연</li>
+            <li>제이콥</li>
+            <li>영훈</li>
+            <li>현재</li>
+            <li>주연</li>
+            <li>케빈</li>
+            <li>뉴</li>
+            <li>큐</li>
+            <li>주학년</li>
+            <li>선우</li>
+            <li>에릭</li>
         </ol>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/11/230216_BSS_%28%EB%B6%80%EC%84%9D%EC%88%9C%29.jpg/1200px-230216_BSS_%28%EB%B6%80%EC%84%9D%EC%88%9C%29.jpg" alt="부석순" width="500px">
-        <br>
+        <img src="https://thumb.mt.co.kr/06/2022/08/2022081714147284794_1.jpg/dims/optimize/" alt="더보이즈 8집 많이 사랑해주세요">
         <input type="text">
         <input type="password" name="" id="">
         <input type="checkbox" name="" id="">
-        <input type="radio" name="gender" id="" checked>
+        <input type="radio" name="gender" id="">
         <input type="radio" name="gender" id="">
     </div>
-
-    <!-- head -->
     <h1>Hello, World!</h1>
     <h2>Hello, World!</h2>
     <h3>Hello, World!</h3>
     <h4>Hello, World!</h4>
     <h5>Hello, World!</h5>
     <h6>Hello, World!</h6>
-
     <h6>Hello, World!</h6>
     <h5>Hello, World!</h5>
     <h4>Hello, World!</h4>
     <h3>Hello, World!</h3>
     <h2>Hello, World!</h2>
     <h1>Hello, World!</h1>
-
-    
 </body>
 </html>
