--- a/20230609_nav/index.html
+++ b/20230609_nav/index.html
@@ -22,7 +22,7 @@
                 <li class="nav-item"><a href="" class="nav-link">캘린더</a></li>
             </ul>
 
-            <div class="nav-toggle">
+            <div class="nav-toggle" id="nav_toggle">
                 <i class="bi bi-list"></i>
             </div>
         </nav>
@@ -36,5 +36,7 @@
     Hello world Hello world Hello world Hello world
     Hello world Hello world Hello world Hello world
     Hello world Hello world Hello world Hello world
+
+    <script src="js/nav.js"></script>
 </body>
 </html>
