--- a/20230620_bookreviewcalendar/review.html
+++ b/20230620_bookreviewcalendar/review.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>review</title>
+    <title>book review calendar</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/review.css">
@@ -29,8 +29,68 @@
         </nav>
     </header>
     
-    <main class="review">
-
+    <main id="review">
+        <div class="image-info-groups container">
+            <div class="book-image">
+                .book-image
+            </div>
+            <div class="info-groups container">
+                <div class="info-group container">
+                    <div class="info container">
+                        <div class="title label">
+                            .title.label
+                        </div>
+                        <div class="title">
+                            .title
+                        </div>
+                    </div>
+                    <div class="info container">
+                        <div class="author-label">
+                            .author-label
+                        </div>
+                        <div class="author">
+                            .author
+                        </div>
+                    </div>
+                </div>
+                <div class="info-group container">
+                    <div class="info container">
+                        <div class="publisher label">
+                            .publisher label
+                        </div>
+                        <div class="publisher">
+                            .publisher
+                        </div>
+                    </div>
+                    <div class="info container">
+                        <div class="read-date label">
+                            .read-date.label
+                        </div>
+                        <div class="read-date">
+                            .read-date
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="reviews container">
+            <div class="review container">
+                <div class="synopsis label">
+                    .synopsis.label
+                </div>
+                <div class="synopsis">
+                    .synopsis
+                </div>
+            </div>
+            <div class="review container">
+                <div class="phrase label"> 
+                    .phrase.lable
+                </div>
+                <div class="phrase">
+                    .phrase
+                </div>
+            </div>
+        </div>
     </main>
 
     <script src="js/data.js"></script>
