--- a/20230825_grid/2-4timetable.html
+++ b/20230825_grid/2-4timetable.html
@@ -17,25 +17,20 @@
         <div class="item" class="class">1교시</div>
         <div class="item">자치</div>
         <div class="item">자료구조</div>
-        <div class="item">코딩</div>
+        <div class="item" id="coding">코딩</div>
         <div class="item">국어</div>
         <div class="item">과학</div>
         <div class="item" class="class">2교시</div>
         <div class="item">영어</div>
         <div class="item">수학</div>
-        <div class="item">코딩</div>
         <div class="item">체육</div>
         <div class="item">WSM</div>
         <div class="item" class="class">3교시</div>
-        <div class="item" id="py-php">PY/PHP </div>
+        <div class="item" >PY/PHP </div>
         <div class="item">WSM</div>
         <div class="item">자료구조</div>
         <div class="item">과학</div>
-        <div class="item">WSM</div>
         <div class="item" class="class">4교시</div>
-        <div class="item" id="py-php">PY/PHP </div>
-        <div class="item">WSM</div>
-        <div class="item">자료구조</div>
         <div class="item">영어</div>
         <div class="item">수학</div>
         <div class="item" class="class">5교시</div>
@@ -49,12 +44,9 @@
         <div class="item">JAVA</div>
         <div class="item">동아리</div>
         <div class="item">JAVA</div>
-        <div class="item">JS/블록체인</div>
         <div class="item" class="class">7교시</div>
         <div class="item"></div>
         <div class="item">영어</div>
-        <div class="item">동아리</div>
-        <div class="item">JAVA</div>
         <div class="item"></div>
     </main>
 </body>
