--- a/20230825_grid/2-4timetable.html
+++ b/20230825_grid/2-4timetable.html
@@ -26,7 +26,7 @@
         <div class="item">체육</div>
         <div class="item">WSM</div>
         <div class="item" class="class">3교시</div>
-        <div class="item" >PY/PHP </div>
+        <div class="item" >PY<br>/<br>PHP</div>
         <div class="item">WSM</div>
         <div class="item">자료구조</div>
         <div class="item">과학</div>
@@ -38,7 +38,7 @@
         <div class="item">국어</div>
         <div class="item">수학</div>
         <div class="item">수학</div>
-        <div class="item">JS/블록체인</div>
+        <div class="item">JS<br>/<br>블록체인</div>
         <div class="item" class="class">6교시</div>
         <div class="item">체육</div>
         <div class="item">JAVA</div>
