--- a/20230620_bookreviewcalendar/calendar.html
+++ b/20230620_bookreviewcalendar/calendar.html
@@ -7,6 +7,7 @@
     <title>book review calendar</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="css/calendar.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 <body>
@@ -29,10 +30,66 @@
     </header>
     
     <main id="calendar">
+        <!-- TITLE 9월 -->
+        <div class="title flex-container">
+            <div class="left">왼쪽</div>
+            <div class="month">9월</div>
+            <div class="right">오른쪽</div>
+        </div>
         
+        <!-- WEEKDAY 일 월 화 수 목 금 토 -->
+        <div class="weekday container">
+            <div class="weeekday item">일</div>
+            <div class="weeekday item">월</div>
+            <div class="weeekday item">화</div>
+            <div class="weeekday item">수</div>
+            <div class="weeekday item">목</div>
+            <div class="weeekday item">금</div>
+            <div class="weeekday item">토</div>
+        </div>
+        <div class="dates container">
+            <!-- DAYS 1 2 3 4 5 -->
+            <div class="date item">1</div>
+            <div class="date item">2</div>
+            <div class="date item">3</div>
+            <div class="date item">4</div>
+            <div class="date item">5</div>
+            <div class="date item">6</div>
+            <div class="date item">7</div>
+            <div class="date item">8</div>
+            <div class="date item">9</div>
+            <div class="date item">10</div>
+            <div class="date item">11</div>
+            <div class="date item">12</div>
+            <div class="date item">13</div>
+            <div class="date item">14</div>
+            <div class="date item">15</div>
+            <div class="date item">16</div>
+            <div class="date item">17</div>
+            <div class="date item">18</div>
+            <div class="date item">19</div>
+            <div class="date item">20</div>
+            <div class="date item">21</div>
+            <div class="date item">22</div>
+            <div class="date item">23</div>
+            <div class="date item">24</div>
+            <div class="date item">25</div>
+            <div class="date item">26</div>
+            <div class="date item">27</div>
+            <div class="date item">28</div>
+            <div class="date item">29</div>
+            <div class="date item">30</div>
+        </div>
+        <div class="review flex-container">
+            <!-- REVIEW  -->
+            <div class="book-title">제목: 역행자</div>
+            <div class="book-read-date">2023년 9월 12일</div>
+            <div class="book-page">쪽수: 129</div>
+        </div>
     </main>
 
     <script src="js/data.js"></script>
     <script src="js/nav.js"></script>
+    <script src="js/calendar.js"></script>
 </body>
 </html>
