--- a/20230620_bookreviewcalendar/calendar.html
+++ b/20230620_bookreviewcalendar/calendar.html
@@ -32,9 +32,9 @@
     <main id="calendar">
         <!-- TITLE 9월 -->
         <div class="title flex-container">
-            <div class="left">왼쪽</div>
+            <div class="left"><i class="bi bi-caret-left"></i></div>
             <div class="month">9월</div>
-            <div class="right">오른쪽</div>
+            <div class="right"><i class="bi bi-caret-right"></i></div>
         </div>
         
         <!-- WEEKDAY 일 월 화 수 목 금 토 -->
