--- a/20230620_bookreviewcalendar/calendar.html
+++ b/20230620_bookreviewcalendar/calendar.html
@@ -33,7 +33,7 @@
         <!-- TITLE 9월 -->
         <div class="title flex-container">
             <div class="left"><i class="bi bi-caret-left"></i></div>
-            <div class="month">9월</div>
+            <div class="month"></div>
             <div class="right"><i class="bi bi-caret-right"></i></div>
         </div>
         
@@ -49,7 +49,7 @@
         </div>
         <div class="dates container">
             <!-- DAYS 1 2 3 4 5 -->
-            <div class="date item">1</div>
+            <!-- <div class="date item">1</div>
             <div class="date item">2</div>
             <div class="date item">3</div>
             <div class="date item">4</div>
@@ -78,7 +78,7 @@
             <div class="date item">27</div>
             <div class="date item">28</div>
             <div class="date item">29</div>
-            <div class="date item">30</div>
+            <div class="date item">30</div> -->
         </div>
         <div class="review flex-container">
             <!-- REVIEW  -->
