--- a/20231020_bootstrap/3. Layout.html
+++ b/20231020_bootstrap/3. Layout.html
@@ -36,6 +36,126 @@
             <div class="col bg-secondary border border-2"> col 1-6 </div>
         </div>
     </div>
+
+    <div class="row">
+        <div class="col bg-secondary border border-2">col 2-1</div>
+        <div class="col bg-secondary border border-2">col 2-2</div>
+        <div class="col bg-secondary border border-2">col 2-3</div>
+    </div>
+
+    <!-- 웹브라우저 너비 : 1000px, .container 한 행에 .col 4개 => 한 열의 너비 크기는 몇 px? : 240px -->
+    <div class="container text-center">
+        <div class="row">
+            <div class="col bg-secondary border border-2">.col 3-1</div>
+            <div class="col bg-secondary border border-2">.col 3-2</div>
+            <div class="col bg-secondary border border-2">.col 3-3</div>
+            <div class="col bg-secondary border border-2">.col 3-4</div>
+        </div>
+    </div>
+
+    <hr>
+
+    <div class="display-2">Setting one column width</div>
+    <div class="container-lg text-center">
+        <div class="row">
+            <div class="col bg-warning border border-3">col 1-1</div>
+            <div class="col-6 bg-warning border border-3">col-6 1-2</div>
+            <div class="col bg-warning border border-3">col 1-3</div>
+        </div>
+
+        <div class="row">
+            <div class="col bg-warning border border-3">col 2-1</div>
+            <div class="col-2 bg-warning border border-3">col-2 2-2</div>
+            <div class="col bg-warning border border-3">col 2-3</div>
+        </div>
+
+        <div class="row">
+            <div class="col-6 bg-warning border border-3">col-6 3-1</div>
+            <div class="col-3 bg-warning border border-3">col-3 3-2</div>
+            <div class="col-3 bg-warning border border-3">col-3 3-3</div>
+        </div>
+    </div>
+
+    <hr>
+
+    <div class="display-2">Column breakpoints</div>
+    <div class="container text-center">
+        <div class="row">
+            <div class="col-4 bg-info border border-3">col 1-1</div>
+            <div class="col-2 bg-info border border-3">col 1-2</div>
+            <div class="col-4 bg-info border border-3">col 1-3</div>
+            <div class="col-2 bg-info border border-3">col 1-4</div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-3 col-lg-4 bg-info border border-3">col 2-1</div>
+            <div class="col-sm-3 col-lg-2 bg-info border border-3">col 2-2</div>
+            <div class="col-sm-3 col-lg-4 bg-info border border-3">col 2-3</div>
+            <div class="col-sm-3 col-lg-2 bg-info border border-3">col 2-4</div>
+        </div>
+    </div>
+
+    <hr>
+
+    <div class="display-2">Row columns</div>
+    <div class="container-lg text-center">
+        <div class="row row-cols-2"> <!-- row-cols-2 => 한줄에 2개씩 -->
+            <div class="col bg-primary border border-3">col 1-1</div>
+            <div class="col bg-primary border border-3">col 1-2</div>
+            <div class="col bg-primary border border-3">col 1-3</div>
+            <div class="col bg-primary border border-3">col 1-4</div>
+        </div>
+
+        <div class="row row-cols-3">
+            <div class="col bg-primary border border-3">col 2-2</div>
+            <div class="col bg-primary border border-3">col 2-3</div>
+            <div class="col bg-primary border border-3">col 2-1</div>
+            <div class="col bg-primary border border-3">col 2-4</div>
+        </div>
+
+        <div class="row row-cols-auto">
+            <div class="col bg-primary border border-3">col 3-1</div>
+            <div class="col bg-primary border border-3">col 3-2</div>
+            <div class="col bg-primary border border-3">col 3-3</div>
+            <div class="col bg-primary border border-3">col 3-4</div>
+        </div>
+
+        <div class="display-3"><576px 1열, >=576px 2열, >=768px 3열, >= 992px 4열</div>
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4">
+            <div class="col bg-primary border border-3">col 4-1</div>
+            <div class="col bg-primary border border-3">col 4-2</div>
+            <div class="col bg-primary border border-3">col 4-3</div>
+            <div class="col bg-primary border border-3">col 4-4</div>
+        </div>
+    </div>
+
+    <div class="display-2">justifying columns</div>
+    <div class="container text-center">
+        <div class="row">
+            <div class="col-md-3 bg-info border border-3">col 1-1</div>
+            <div class="col-md-3 bg-info border border-3">col 1-2</div>
+            <div class="col-md-3 bg-info border border-3">col 1-3</div>
+        </div>
+
+        <div class="row justify-content-end">
+            <div class="col-md-3 bg-info border border-3">col 1-1</div>
+            <div class="col-md-3 bg-info border border-3">col 1-2</div>
+            <div class="col-md-3 bg-info border border-3">col 1-3</div>
+        </div>
+
+        <div class="row justify-content-center">
+            <div class="col-md-3 bg-info border border-3">col 1-1</div>
+            <div class="col-md-3 bg-info border border-3">col 1-2</div>
+            <div class="col-md-3 bg-info border border-3">col 1-3</div>
+        </div>
+
+        <div class="row justify-content-between">
+            <div class="col-md-3 bg-info border border-3">col 1-1</div>
+            <div class="col-md-3 bg-info border border-3">col 1-2</div>
+            <div class="col-md-3 bg-info border border-3">col 1-3</div>
+        </div>
+    </div>
+
         
     <!-- 너비가 균등하게 배치 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
